tests/errors/syntax_error.flap
// Test syntax error - unterminated string
x = "hello world
y = 10
println(y)
